welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
var bizkit=0
^Poucet:10: error: '(' expected but '{' found.
    while {(crossing()!=false)
          ^Poucet:21: error: 'while' expected but '}' found.
}
^